--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,27 @@ body {
 
 /* searchBar */
 .searchBar {
+  margin: auto 0;
+  border: 1px solid rgb(231, 231, 231);
+  border-radius: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.2);
+}
+
+.btn {
+  margin: auto 0;
+  border-radius: 0px 10px 10px 0px;
+}
+
+.custom-select {
+  margin: auto 0;
+  text-align: center;
+  border: none;
+}
+
+#select {
+  border-radius: 10px 0px 0px 10px;
 }
 
 /* Card */
@@ -43,6 +62,12 @@ body {
   min-width: 500px;
   margin: 10px 0;
   box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.2);
+}
+
+.card p {
+  color: rgb(107, 107, 107);
+  font-size: 16px;
+  margin-bottom: .5rem;
 }
 
 .card-horizontal {
@@ -61,7 +86,7 @@ body {
 }
 
 .map {
-  top: 95px;
+  top: 77px;
 }
 
 .map iframe {
@@ -78,3 +103,4 @@ body {
   margin-top: 10px;
   padding: 16px;
 }
+
