--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,7 @@ body {
 .sideMap {
   margin: 0;
   padding: 0;
+  background-color: rgba(177, 177, 177, 0.2);
 }
 
 .map {
@@ -91,7 +92,7 @@ body {
 
 .map iframe {
   width: 100%;
-  height: 500px;
+  height: 520px;
 }
 
 /* Content */
@@ -99,8 +100,22 @@ body {
   margin-top: 100px;
 }
 
+.pagination {
+  padding: 0;
+  margin: auto 0;
+}
+
+#pagination_nav {
+  margin: auto 0;
+}
+
 .contentFooter {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   margin-top: 10px;
   padding: 16px;
 }
 
+.contentFooter select {
+  width: 250;
+}
